client/src/App.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.App {
  text-align: center;
  min-height: 100vh;
  background-color: rgb(249, 249, 249);
}

@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");

body {
  margin: 0;
  font-family: "Roboto", sans-serif;
}

input {
  margin-right: 10px;
  padding: 4px 5px;
  outline: none;
  border: 2px solid #f76c6c;
  border-radius: 2px;
  background-color: rgb(249, 249, 249);
}

input:focus {
  background-color: rgb(235, 235, 235);
}

button {
  padding: 5px 5px;
  background-color: #f76c6c;
  border: 1px solid #f76c6c;
  border-radius: 3px;
  color: rgb(240, 240, 240);
  cursor: pointer;
}

button:hover {
  transform: scale(1.025);
}

.btn-delete {
  width: 15px;
  height: 15px;
  padding: 0;
  margin-left: 5px;
}

main {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 960px;
  margin: 5vh 0;
  min-height: 75vh;
}

header {
  display: flex;
  align-items: center;
  justify-content: center;
  background: #f4f4f4;
  padding: 2em;
  height: 10vh;
}

header img {
  max-width: 96px;
}

header h1 {
  font-size: 2.5em;
}

h1,
h2 {
  text-align: center;
}

label {
  display: block;
  margin-bottom: 0.5em;
}

.new-member-form {
  margin: 2em 0 4em 0;
  text-align: center;
}

.member-list {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-wrap: wrap;
  width: 60vw;
}

.member-item {
  width: 20vw;
  padding: 0.25em 0;
}

footer {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 5vh;
  color: #fff;
  background: #f76c6c;
  padding: 1vh 0;
}

